Fix hero image on mobile screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ header {
     width: 100%;
     padding: 0 1rem;
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     width: 100%;
     border-bottom: 4px solid rgb(174, 75, 182);
     display: flex;
@@ -55,10 +55,12 @@ header a {
     padding: 4px;
     padding-top: 6%;
     height: 100%;
+    
 }
 
 #menu>li {
     margin-bottom: 1em;
+    right: 0;
 }
 
 .active {
@@ -70,7 +72,7 @@ nav {
     position: absolute;
     background-color: rgb(72, 8, 97);
     width: 100%;
-    left: 0;
+    left: 80;
     padding: 0 1rem;
     display: none;
     top: 100%;
@@ -112,9 +114,10 @@ main {
 
 /* Hero Section */
 #hero {
-    height: 30vh;
+    height: 83vh;
     width: 100%;
     background: url("../images/hero-image.webp") no-repeat center center/cover;
+    
 }
 
 #catering {
@@ -133,7 +136,8 @@ main {
     background-color: rgb(72, 8, 97);
     position: absolute;
     right: 0;
-    top: 40;
+    margin-top: 3px;
+    /*top: 40;*/
     z-index: 2;
     height: 25px;
     width: 6rem;
@@ -150,11 +154,10 @@ main {
     color: aliceblue;
     top: 72%;
     left: 20%;
-    
-    transform: translate(-50%, -50%);
+    z-index: 2;
     width: 40%;
     
-    position: relative;
+    position: absolute;
 }
 
 #cafe-ad  {
@@ -166,6 +169,7 @@ main {
 #menus {
     text-align: center;
     padding: 20%;
+    
 
 /*.the-menus {
     display: flex;
@@ -191,8 +195,13 @@ ul {
 
 #coffee {
     background-color: rgb(255, 255, 122);
-    
+    box-shadow: 5px 10px 5px #700274;
+    width:190px;
     top: -20px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
 
 #pies {
@@ -205,15 +214,15 @@ ul {
 
 }
 
- .address {
-     background-color: rgba(161, 146, 5, 0.5);
+ #address {
+    background-color: rgba(161, 146, 5, 0.5);
      /*border: solid rgb(255, 240, 0);*/
-     box-shadow: 5px, 10px, 10px, #810e0e;
-     top: 50%;
-     left: 50%;
-     width: 40%;
-     height: 80%;
-     margin: auto;
+    
+    top: 50%;
+    left: 50%;
+    width: 40%;
+    height: 80%;
+    margin: auto;
     border-radius: 6px;
     text-align: center;
     position: center;
@@ -250,6 +259,16 @@ ul {
  }
 
 footer {
+    width: 100%;
+    padding: 0 1rem;
+    position: fixed;
+    z-index: 3;
+    width: 100%;
+    border-bottom: 4px solid rgb(174, 75, 182);
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    }
     /* border-top: 8px solid rgb(174, 75, 182);
     box-shadow: 3px 0 2px rgb(184, 181, 183); */
 }
@@ -300,7 +319,10 @@ footer {
         margin: 0 0 .5rem;
         padding-top: 3%;
     }
-
+    #hero {
+        height: 70vh;
+        width: 100vw;
+    }
     #catering {
         background-color: rgba(255, 255, 122, 0.6);
         padding-left: 4px;
@@ -325,16 +347,7 @@ footer {
         height: 20%;
     }
 
-    #cafe-ad h2 {
-        font-size: 150%;
-        text-align: center;
-        margin-top: 2px;
-    }
-
-    #cafe-ad h3 {
-        font-size: 100%;
-        text-align: center;
-    }   
+   
     
     .contact {
         font-size:large;
